--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,10 @@
       "ecmaVersion": 12
     },
     "rules": {
-      "no-console": "off"
+      "no-console": "off",
+      "quotes": [
+        "error",
+        "double"
+      ]
     }
   }
